<resources>
    <string name="app_name">Test</string>

    <!--关于页面-->
    <string name="preview_about_company_name">Shenzhen Dianyang Technology Co., Ltd.</string>
    <string name="preview_about_company_website">WebSite：</string>
    <string name="preview_about_company_website_content">www.dyt-ir.com</string>
    <string name="preview_about_contact_email_content">service@dianytech.com</string>
    <string name="preview_about_contact_us">Contact us：</string>
    <string name="preview_about_contact_us_email">service@dianytech.com</string>
    <string name="about_tel_info">Tel：</string>

<!--    精明鼠定制 字符串 -->
    <string name="about_companyName_jms">Shenzhen NOYAFA ELECTRONIC Co., Ltd.</string>
    <string name="about_companyWebsite_jms">www.noyafa.com</string>
    <string name="about_tel_content_jms">0086–755–2778 6545</string>
    <string name="about_contactEmail_jms">sale@nayafa.com</string>
    <string name="about_mainBusiness_jms">E-mail：</string>
    <string name="about_mainBusiness_content_jms">sale@noyafa.com</string>
    <!--    驿生胜利定制 字符串 -->
    <string name="about_companyName_victor">Shenzhen Yisheng Victor Technology Co., Ltd.</string>
    <string name="about_companyWebsite_content_victor">www.china-victor.com</string>
    <string name="about_tel_content_victor">0086–755–2778 6545</string>
    <string name="about_contactEmail_content_victor">victor@china-victor.com</string>
    <string name="about_main_user_manual_victor">User manual</string>

<!--    潜力定制版-->
    <string name="about_companyName_qianli">Shenzhen QianLi Innovation Technology Co., Ltd.</string>
    <string name="about_companyWebsite_content_qianli">www.qianli.cn</string>
    <string name="about_contactEmail_content_qianli">shenzhenpotential@gmail.com</string>
    <!--    泰视朗 定制版-->
    <string name="about_companyName_teslong">Shenzhen Teslong Technology Co., Ltd</string>
    <string name="about_companyWebsite_content_teslong">https://www.teslong.com</string>
    <string name="about_contactEmail_content_teslong">support@teslong.com</string>

    <!--    迈测 定制版-->
    <string name="about_companyName_mileseey">Shenzhen Mileseey Technology Co., Ltd.</string>
    <string name="about_companyWebsite_content_mileseey">www.mileseeytools.com</string>
    <string name="about_contactEmail_content_mileseey">service@mileseey.com</string>
    <!--    光智 定制版-->
    <string name="about_companyName_votin">Vital Optics Technology Co., Ltd.</string>
    <string name="about_companyWebsite_content_votin">http://www.votinfrared.com/en/index.html</string>
    <string name="about_contactEmail_content_votin">sales@votinfrared.com</string>

    <!--    睿迪菲尔 定制版-->
    <string name="about_companyName_radifeel">Beijing Radifeel Technology Co., Ltd.</string>
    <string name="about_companyWebsite_content_radifeel">www.radifeel.com</string>
    <string name="about_contactEmail_content_radifeel">service@radifeel.com</string>

<!--    恒昕泰 -->
    <string name="about_companyName_henxtech">Shenzhen Hengxintai Industrial CO,.LTD.</string>
    <string name="about_companyWebsite_content_henxtech">www.henxtech.com</string>
    <string name="about_contactEmail_content_henxtech">amanda@henxtech.com</string>

    <!--    MTI448-->
    <string name="about_companyName_mti448">Trafino Oy</string>
    <string name="about_companyWebsite_content_mti448">www.trafino.fi</string>
    <string name="about_contactEmail_content_mti448">trafino@trafino.fi</string>
    <string name="about_tel_content_mti448">+358 9 348 34 150</string>

    <!--    MTI448-->
    <string name="about_companyName_msti256">Huizhoushi Maice Technology Co.,Ltd.</string>
    <string name="about_companyWebsite_content_msti256">contact.us@acegmet.com</string>

    <!--    页面名称-->
    <!--    <string name="app_name">Pir</string>-->
    <string name="about_devices_type">Type：</string>
    <string name="about_devices_default">default</string>
    <!--    页面名称-->
<!--    <string name="app_name">Pir</string>-->
    <string name="Gallery">Gallery</string>
    <string name="Welcome">Welcome</string>
    <string name="MediaBrowser">Gallery</string>

    <string name="MediaBrowser_all">All</string>
    <string name="MediaBrowser_pic">Picture</string>
    <string name="MediaBrowser_video">Video</string>
    <string name="MediaBrowser_delete">Delete</string>
    <!--    功能名称-->
    <string name="ShowHighLowTemp">ShowHighLowTemp</string>
    <string name="AreaCheck">AreaCheck</string>
    <string name="HighTempAlarm">HighTempAlarm</string>
    <string name="FixeTempBar">FixeTempBar</string>
    <string name="DynamicTempBar">DynamicTempBar</string>
    <!--    超温警告弹窗文字-->
    <string name="AlarmTempInput">Input</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>

    <string name="check_updates">Upgrade</string>
    <string name="VersionName">Version: </string>

    <string name="contactus_email_head">mailto: </string>
    <string name="contactus_choice_email">usable email App lists：</string>
    <string name="pop_about_privacy_policy">privacy policy</string>

    <!--录制-->
    <string name="StartRecorderService">Start recorder service</string>

    <!--    设置页-->
    <string name="SettingGeneral">General</string>
    <string name="SettingLanguage">Language</string>
    <string name="setting_language_chinese">Chinese</string>
    <string name="setting_language_english">English</string>
    <string name="SettingTemperatureUnit">Temperature Unit</string>
    <string name="SettingIsRecordAudio">Record with Audio</string>
    <string name="SettingCameraParams">Thermal Parameters</string>
    <string name="SettingCameraParams_Emittance">Emissivity</string>
    <string name="SettingCameraParams_Distance">Distance </string>
    <string name="SettingCameraParams_ReflectTemp">Reflection Temperature </string>
    <string name="SettingCameraParams_Revise">Temperature Adjustment </string>
    <string name="SettingCameraParams_FreeAirTemp">Ambient Temperature </string>
    <string name="SettingCameraParams_Humidity">Humidity (%)</string>
    <string name="SettingCameraParams_Reset">Default</string>
    <string name="setting_update">Upgrade</string>
    <string name="setting_check_version_info">App Version:%s</string>
    <string name="setting_high_low_temp_gain_toggle_info">High and Low TEMP. Switch</string>
    <string name="setting_high_gain">High</string>
    <string name="setting_low_gain">Low</string>
    <string name="toast_setting_HL_swtich_success">High and low temperature switch successfully.</string>
    <string name="toast_setting_HL_swtich_fail">High and low temperature switching failed.</string>

    <!--  设置======更新操作-->
    <string name="toast_downloading_background">Downloading in the background…</string>
    <string name="pop_version">The latest version:</string>
    <string name="toast_already_latest_version">already the latest version</string>
    <string name="pop_update_now">Update now</string>
    <string name="pop_ignore">Ignore</string>
    <string name="value_zero">0.0</string>

    <string name="toast_is_recording">Recording video now…</string>
    <string name="toast_save_path">Save path:</string>
    <string name="toast_need_connect_camera">Please connect camera</string>
    <string name="toast_dont_have_permission">No corresponding permission granted.</string>
    <string name="toast_base_permission_explain">Without read-write storage permission, you will not be able to preview the page,
        take pictures, record and other functions. Whether to authorize？</string>
    <string name="toast_base_permission_tosetting">Without permission, you will not be able to preview the page,
        take pictures, record and other functions.Do you want to set it on?</string>
    <string name="toast_select_same_language">The selected language is the same as the current language.</string>

    <!--    取值范围设置 -->
    <string name="toast_range_int">"The value range is (%1$d ~ %2$d)"</string>
    <string name="toast_range_float">"The value range is (%1$.2f ~ %2$.2f)"</string>
    <string name="toast_complete_Emittance">Emissivity setting complete</string>
    <string name="toast_complete_Distance">Distance setting complete</string>
    <string name="toast_complete_Reflect">Reflected temperature setting complete</string>
    <string name="toast_complete_Revise">Calibration setting complete</string>
    <string name="toast_complete_FreeAirTemp">Ambient temperature setting complete</string>
    <string name="toast_complete_Humidity">Humidity setting complete</string>


</resources>