<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_160dp"
        android:background="@drawable/bg_main_preview_setting_pop"
        android:paddingStart="@dimen/dimen_20dp"
        android:paddingEnd="@dimen/dimen_20dp">

        <!--标题导航线-->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_setting_title"
            android:layout_width="@dimen/dimen_5dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dimen_20dp" />
        <!--公司名称-->
        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/about_companyName_votin"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/gl_setting_title"
            app:layout_constraintTop_toTopOf="parent" />
        <!--网址-->
        <!--        超链接颜色设置-->
        <!--        android:textColorLink="@color/white"-->
        <TextView
            android:id="@+id/tv_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/preview_about_company_website"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_company_name"
            app:layout_constraintTop_toBottomOf="@id/tv_company_name" />

        <TextView
            android:id="@+id/tv_company_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/about_companyWebsite_content_votin"
            android:textColorLink="@color/white"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_website"
            app:layout_constraintLeft_toRightOf="@id/tv_website"
            app:layout_constraintTop_toTopOf="@id/tv_website" />

        <!--        主营 链接-->
        <!--        光智定制版 改为联系我们-->
        <TextView
            android:id="@+id/tv_about_contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:autoLink="web"
            android:text="@string/preview_about_contact_us"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_company_name"
            app:layout_constraintTop_toBottomOf="@id/tv_website" />

        <TextView
            android:id="@+id/tv_about_contact_us_email"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:autoLink="email"
            android:text="@string/about_contactEmail_content_votin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textIsSelectable="true"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_about_contact_us"
            app:layout_constraintLeft_toRightOf="@id/tv_about_contact_us"
            app:layout_constraintTop_toTopOf="@id/tv_about_contact_us" />

        <!--        使用说明文档-->
        <TextView
            android:id="@+id/tv_about_main_user_manual_info_votin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:autoLink="all"
            android:background="@drawable/txt_under_line"
            android:text="@string/about_main_user_manual_victor"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_company_name"
            app:layout_constraintTop_toBottomOf="@id/tv_about_contact_us" />

        <!--        光智定制版 设备类型-->
        <TextView
            android:id="@+id/tv_about_devices_type_info_votin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:autoLink="web"
            android:text="@string/about_devices_type"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_company_name"
            app:layout_constraintTop_toBottomOf="@id/tv_about_main_user_manual_info_votin" />

        <TextView
            android:id="@+id/tv_about_devices_type_votin"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textIsSelectable="true"
            android:textSize="@dimen/dimen_16sp"
            android:layout_marginStart="@dimen/dimen_10dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_about_devices_type_info_votin"
            app:layout_constraintLeft_toRightOf="@id/tv_about_devices_type_info_votin"
            app:layout_constraintTop_toTopOf="@id/tv_about_devices_type_info_votin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>