<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />
    <!--     android:background="@drawable/bg_main_preview_setting_pop"-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_145dp"
        android:background="@color/black"
        android:paddingStart="@dimen/dimen_20dp"
        android:paddingEnd="@dimen/dimen_20dp">

        <!--标题导航线-->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_setting_title"
            android:layout_width="@dimen/dimen_5dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dimen_20dp" />
        <!--公司名称-->
        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/about_companyName_mti448"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/gl_setting_title"
            app:layout_constraintTop_toTopOf="parent" />

        <!--      网址  超链接颜色设置-->
        <TextView
            android:id="@+id/tv_company_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/about_companyWebsite_content_mti448"
            android:textColorLink="@color/white"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="@id/gl_setting_title"
            app:layout_constraintTop_toBottomOf="@id/tv_company_name" />

<!--        电话-->
        <TextView
            android:id="@+id/about_phone_content_mti448"
            android:autoLink="phone"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/about_tel_content_mti448"
            android:textColorLink="@color/white"
            android:textSize="@dimen/dimen_16sp"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="@id/gl_setting_title"
            app:layout_constraintTop_toBottomOf="@id/tv_company_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--        MTI448 邮箱-->
        <TextView
            android:id="@+id/tv_about_contact_us_email"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:autoLink="email"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/about_contactEmail_content_mti448"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textIsSelectable="true"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="@id/gl_setting_title"
            app:layout_constraintTop_toBottomOf="@id/about_phone_content_mti448"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>